# AuctionNet

./: .gitignore  README.md  main.py  main_test.py  plot_eval_log.py  plot_training_checkpoints.py  pyproject.toml  requirements.txt  run_main_test_della_cpu.sbatch  run_plot_eval_log.sh
config/: test.gin
docs/: baseline-training-and-custom-agent.md  basic-iql-extension.md  data-processing-pipeline.md  offline-progress-metrics.md  oil-ppo-training-and-evaluation.md  phased-temporal-iql-implementation.md  temporal-iql-extension.md  training-checkpoint-plots.md  training-metric-tracker.md
run/: run_test.py
slurm_out/: prep_data-3131522.out
specs/: Adroit_HPC_Guide.md  COS 435 Course Project Large-Scale Auction Challenge.docx  EXTENSIONS_OVERVIEW.md  presentation_script.md  presentation_script_7min.docx  presentation_script_7min.md  presentation_script_7min_edited.docx  presentation_script_7min_edited.md  slurm_guide.html
specs/Specs/: MARKET_REGIME_EXTENSION.md  project-template.tex
strategy_train_env/: README_strategy_train.md  csv_to_parquet.py  plot_ppo_sweep_curves.py  run_iql_della_gpu.sbatch  train_strategy_array_della_gpu.sbatch  train_strategy_della_gpu.sbatch
strategy_train_env/main/: main_iql_60.py  main_iql_temporal.py  main_ppo.py
strategy_train_env/run/: offline_metric_tracker.py  run_bc.py  run_bcq.py  run_cql.py  run_decision_transformer.py  run_eval_ppo.py  run_evaluate.py  run_iql.py  run_iql.py.bak_metric_tracker_20260407  run_iql_60.py  run_iql_temporal.py  run_ppo.py  run_td3_bc.py
strategy_train_env/slurm/: README.md  baseline_obs60_10m.slurm  baseline_ppo_obs60_10m.slurm  eval_ppo.slurm  eval_regime_v1.slurm  obs_audit_2m.slurm  obs_audit_5m.slurm  obs_audit_5m_all.slurm  prepare_data.slurm  regime_v1_10m_all.slurm  smoke_ppo_obs60.slurm  weighted_t30_10m.slurm  weighted_t30_obs60_10m.slurm
strategy_train_env/tests/: test_iql_temporal_phases.py
(+75 files in other folders)
