[project]
name = "auctionnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "func-timeout>=4.3.5",
    "gin>=0.1.6",
    "gin-config>=0.5.0",
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "psutil>=7.2.2",
    "pyarrow>=23.0.1",
    "scipy>=1.17.1",
    "stable-baselines3>=2.8.0",
    "torch>=2.11.0",
]
