[project]
name = "auctionnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Project deps — loose lower bounds only, so vllm's transitive pins can win.
    "func-timeout>=4.3.5",
    "gin>=0.1.6",
    "gin-config>=0.5.0",
    "gymnasium>=1.2.3",
    "matplotlib>=3.8",
    "numpy>=1.24",        # vllm/numba pin numpy<2.3 → keep a wide lower bound
    "pandas>=2.0",
    "psutil>=5.9",
    "pyarrow>=14",
    "scipy>=1.11",
    "stable-baselines3>=2.4",
    "torch==2.10.*",      # matches what you're installing with vllm
    "verl>=0.4.1",
    "vllm==0.19.1",       # pinned to the wheel that's known-good
]

[tool.uv]
# Restrict the resolver to this cluster's actual platform; otherwise uv
# resolves for Windows too and spuriously fails on marker-gated deps.
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
# vllm must install from its published wheels (cu128 py3.12 linux_x86_64);
# letting uv source-build it triggers torch's CUDA_HOME check, which fails
# on nodes where the system CUDA toolkit differs from torch's compile CUDA.
no-build-package = ["vllm"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
